--- a/app2/Dockerfile
+++ b/app2/Dockerfile
@@ -1,5 +1,9 @@
-FROM golang:1.20-alpine
+FROM golang:1.20
 WORKDIR /app2
+COPY go.mod ./
+COPY go.sum ./
+RUN go mod tidy
 COPY . .
-RUN go build -o app2 cmd/main.go
-CMD ["./app2","--config=config/config.toml"]
+RUN go build -o /app2
+EXPOSE 8888
+CMD [ "/app2","--config=config/config.toml"]
